# litr

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  build.zig  build.zig.zon  default.nix  example-input.dj
.github/workflows/: ci.yaml
docs/: litr-example.md  out.scm
docs/examples/: aliases.md  litr.toml
src/: cli.rs  config.rs  directory.rs  lib.rs  main.rs  main.zig  root.zig
src/cli/: tangle.zig
src/lib/: file.zig  tangle.zig
xtask/: Cargo.toml
xtask/src/: completions.rs  main.rs  manpages.rs
